Modifing DB, adding new endpoints to frontend, editing backend according to new DB